<resources>
    <string name="app_name">homamuser</string>
    <string name="login">Login</string>
    <string name="rotate">0</string>
    <string name="rotate0">180</string>
    <string name="welcome">ًWelcome</string>
    <string name="please_login_or_sign_up_to_continue_using_our_app">please login or sign up to continue using our app</string>
    <string name="email_phonenumber">PhoneNumber</string>
    <string name="please_check_your_email_and_try_again">please check your email and try again.</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="i_have_an_account">I have an account?</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="your_email">Your Email</string>
    <string name="next">Next</string>
    <string name="verification_code_has_been_sent_to_your_email_addresse">Verification code has been sent to your Phone Number</string>
    <string name="resent_code">Resent Code</string>
    <string name="update_password">Update Password</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_password">Re_type Password</string>
    <string name="update">Update</string>
    <string name="about_us">About Us</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="contact_us">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="open">open</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="role_on_food_you_which_love">Role on Food You Which Love</string>
    <string name="special_offers">Special Offers</string>
    <string name="sell_all">See all</string>
    <string name="restaurants">Restaurants</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="order">Order</string>
    <string name="open_now">Open Now</string>
    <string name="best_dishes">Best Dishes</string>
    <string name="my_order">My Order</string>
    <string name="menu">Menu</string>
    <string name="choose_the_size">Choose the Size</string>
    <string name="additions">Additions</string>
    <string name="special_comments">Special comments</string>
    <string name="example_please_don_t_add_onions">Example:please don\'t add onions</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="order_details">Order details</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="tax">Tax</string>
    <string name="order_now">Order Now</string>
    <string name="order_Details">Order Details</string>
    <string name="address">Address</string>
    <string name="select_address">Select Address</string>
    <string name="search">search</string>
    <string name="enter_email_phone">Enter email or phone</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_phone">Enter phone</string>
    <string name="confirm_not_equal_password">Confirm Password not equal Password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_new_pass">Enter New password</string>
    <string name="enter_retype_pass">Retype password</string>
    <string name="dosent_match">The password does not match the new password</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_message">Enter Message</string>
    <string name="login_success">تم تسجيل الدخول بنجاح</string>
    <string name="verification_phone_number">Verification Phone Number</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="phone_verified">Phone Verified Successfully</string>
    <string name="enter_code">Enter Verification Code</string>
    <string name="close">Close</string>
    <string name="offers">Offers</string>
    <string name="check_internet_connection">Check internet connections</string>
    <string name="cart_is_empty">Cart Is Empty</string>
    <string name="update_pass">Password Update Successfully</string>
    <string name="codesend">Code send successfully</string>
    <string name="order_from">Order From</string>
    <string name="log_out">log out</string>
    <string name="waiting_order">pending Order</string>
    <string name="delivered">Delivered</string>
    <string name="accepted_order">Accepted Order</string>
    <string name="canceled_order">Canceled Order</string>
    <string name="working_on">Working On</string>
    <string name="ready_for_delivery">ready for delivery</string>
    <string name="on_delivery">On delivery</string>
    <string name="itemdelete">Item Deleted</string>
</resources>