<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/top_layout"
        android:background="@drawable/backgrounlogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".view.login.LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="UnusedAttribute,UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:padding="10dp"
                android:layout_gravity="center"
                android:id="@+id/backbtn"
                android:rotation="@string/rotate"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/robotobold"
                android:textSize="17sp"

                />


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/logologin"
            android:id="@+id/img_box"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_layout"
        android:background="@drawable/buttoncornerwhitebackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:elevation="5dp"
        android:layout_marginEnd="20dp"
        tools:context=".view.login.LoginActivity">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txt_welcom"
            android:text="@string/welcome"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/rubikmedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/txt_welcom"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txt_please_login"
            android:text="@string/please_login_or_sign_up_to_continue_using_our_app"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/rubikregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />

        <EditText
            app:layout_constraintTop_toBottomOf="@+id/txt_please_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/edit_username"
            android:hint="@string/user_name"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/rubikregular"
            android:background="@drawable/buttonwhitebordergray"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp" />

        <EditText
            app:layout_constraintTop_toBottomOf="@+id/edit_username"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/edit_email_phone"
            android:hint="@string/email_phonenumber"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/rubikregular"
            android:background="@drawable/buttoncornerwhitebackground"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp" />

        <EditText
            app:layout_constraintTop_toBottomOf="@+id/edit_email_phone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/edit_phone"
            android:hint="@string/phone"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/rubikregular"
            android:background="@drawable/buttonwhitebordergray"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/input_password"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="1dp"
            android:textColorHint="@color/gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/eyecolor"
            >

            <com.google.android.material.textfield.TextInputEditText
                app:layout_constraintTop_toBottomOf="@+id/txt_please_check"
                android:id="@+id/edit_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textSize="10sp"
                android:paddingStart="10dp"
                android:fontFamily="@font/rubikregular"
                android:background="@drawable/buttonwhitebordergray"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/input_password_confirm"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="1dp"
            android:textColorHint="@color/gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/eyecolor"
            >

            <com.google.android.material.textfield.TextInputEditText
                app:layout_constraintTop_toBottomOf="@+id/txt_please_check"
                android:id="@+id/edit_password_confirm"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textSize="10sp"
                android:paddingStart="10dp"
                android:fontFamily="@font/rubikregular"
                android:background="@drawable/buttonwhitebordergray"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp" />

        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@+id/input_password_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btn_registe"
            android:fontFamily="@font/rubikmedium"
            android:textColor="@color/white"
            android:background="@drawable/roundorangebutton"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_layout"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center"
        android:id="@+id/lin_register"
        >

        <TextView
            android:text="@string/i_have_an_account"
            android:textSize="13sp"
            android:fontFamily="@font/rubikregular"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />

        <TextView
            android:text="@string/log_in"
            android:textColor="@color/orangebutton"
            android:textSize="13sp"
            android:fontFamily="@font/rubikbold"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>