<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.MainActivity"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="UnusedAttribute,UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:padding="10dp"
                android:layout_gravity="center"
                android:id="@+id/backbtn"
                android:rotation="@string/rotate"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/robotobold"
                android:textSize="17sp"

                />


        </LinearLayout>


        <TextView
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:id="@+id/username"
            android:elevation="15dp"
            android:fontFamily="@font/robotoregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/your_email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:elevation="15dp"
            android:id="@+id/useremail"
            android:fontFamily="@font/robotoregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@+id/useremail"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btn_edit"
            android:fontFamily="@font/rubikmedium"
            android:textColor="@color/eyecolor"
            android:background="@drawable/drwable_corner_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/backgrounlogin"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:context=".view.login.LoginActivity">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/register_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btn_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:elevation="10dp">

            <LinearLayout
                app:layout_constraintTop_toTopOf="@+id/register_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/myorders"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/orangefateh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="My Order"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:fontFamily="@font/robotobold"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <TextView
                app:layout_constraintTop_toBottomOf="@+id/myorders"
                android:layout_marginTop="15dp"
                android:text="@string/logout"
                android:padding="15dp"
                android:id="@+id/logout"
                android:textColor="@color/eyecolor"
                android:fontFamily="@font/robotobold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/undrawpersonal"
                android:scaleX="1.6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>