<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.aboutus.AboutUsActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="UnusedAttribute,UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:padding="10dp"
                android:layout_gravity="center"
                android:id="@+id/backbtn"
                android:rotation="@string/rotate"
                tools:ignore="ContentDescription"
                app:tint="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/robotobold"
                android:textSize="17sp"

                />

        </LinearLayout>

    <ImageView
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/undrawteam"
        android:id="@+id/img_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/img_team"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:id="@+id/ispum"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/robotobold"
        android:textSize="17sp"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/ispum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="kkkkkfkfkkfkkfhhdldddlkdkjd"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/robotobold"
        android:textSize="17sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>