<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.cart.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="20dp"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        tools:ignore="UnusedAttribute,UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/backbtn"
            android:rotation="@string/rotate"
            tools:ignore="ContentDescription"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/robotobold"
            android:textSize="17sp"

            />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        android:id="@+id/con_pasta"
        android:background="@drawable/buttonwhitebordergray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularimageview.CircularImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/pasta"
            android:scaleType="centerCrop"
            android:id="@+id/img_food"
            android:layout_width="80dp"
            android:layout_height="80dp"/>


        <LinearLayout
            app:layout_constraintStart_toEndOf="@+id/img_food"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="0dp">

                <TextView
                    android:text="Order From"
                    android:id="@+id/num_dished"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:fontFamily="@font/robotoregular"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>

                <TextView
                    android:text="Happy Bones"
                    android:id="@+id/order"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotobold"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>

            </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/con_pasta"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/order_details"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:id="@+id/txt_orderdetails"
        android:textColor="@color/black"
        android:fontFamily="@font/robotobold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@+id/txt_orderdetails"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:visibility="invisible"
        tools:listitem="@layout/item_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>